# schedmap

./: .gitignore  Cargo.toml  Dockerfile  deploy.py  docker-build.ps1  readme.md  schedmap-deployed.service
src/: client_app.html  client_app.js  client_style.css  main.rs  routes.rs  routes_types.rs  state.rs  websockets.rs
src/www/: app_badge_input.html  app_home.html  app_locations.html  client_app.html  client_app.js  client_style.css
test-assets/: known_employees.csv
